--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "test": "jest"
   },
-  "jest": { "testEnvironment": "node",
-    "coveragePathIgnorePatterns": [ "/node_modules/" ] 
-     }, 
-    
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
